<?xml version="1.0" encoding="utf-8"?><!--
  ~ This file is part of AgatteClient.
  ~
  ~ AgatteClient is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ AgatteClient is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with AgatteClient.  If not, see <http://www.gnu.org/licenses/>.
  ~
  ~ Copyright (c) 2014 Rémi Pannequin (remi.pannequin@gmail.com).
  -->

<resources>

    <string name="app_name">Agatte</string>
    <string name="action_settings">Preferences</string>
    <string name="server_prefs_title">Agatte server</string>
    <string name="server_default_value">agatte.univ-lorraine.fr</string>
    <string name="login_prefs_title">User name</string>
    <string name="login_default_value">name5</string>
    <string name="password_prefs_title">Password</string>
    <string name="password_default_value">******</string>
    <string name="title_activity_settings">Preferences</string>
    <string name="action_update">Update</string>
    <string name="dialog_confirm_punch">Confirm sending punch ?</string>
    <string name="send">Punch</string>
    <string name="cancel">Cancel</string>
    <string name="punch_button1">Punch an arrival</string>
    <string name="punch_button2">Punch a leaving</string>
    <string name="network_error_toast">Network Error</string>
    <string name="unauthorized_network_toast">Network not authorized</string>
    <string name="login_failed_toast">Unable to login : invalid user or password</string>
    <string name="error_toast">Connection to server failed.</string>
    <string name="updating">Updating…</string>
    <string name="punch_ok_toast">Punching done</string>
    <string name="daily_time_count">Day</string>
    <string name="time_count">Counters</string>
    <string name="time_test">5h30</string>
    <string name="week_goal_prefs_title">Weekly work time</string>
    <string name="connection_preferences">Connexion</string>
    <string name="profile_preference">Profile</string>
    <string name="title_activity_about">About</string>
    <string name="about_description">Use Agatte from your smart phone</string>
    <string name="about_author">© 2013 Rémi Pannequin (remi.pannequin@gmail.com)</string>
    <string name="about_version">AgatteClient (version %s)</string>
    <string name="action_about">Help</string>
    <string name="about_free_soft">This is free software : you can redistribute it and/or modify
        it under the terms of the GNU General Public License as published by
        the Free Software Foundation, either version 3 of the License, or
        (at your option) any later version.\n
        \n
        You can get a copy of the GNU General Public License at this address <link>http://www.gnu.org/licenses</link>         \n
        This program is distributed in the hope that it will be useful,
        but WITHOUT ANY WARRANTY; without even the implied warranty of
        MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
        GNU General Public License for more details.\n <u>Beware that time counters might be wrong, and punches might be lost...</u></string>
    <string name="about_getting_involved">If you wan\'t to get in touch with the authors, follow
        developpement, become a tester or make some sugesstion, you can register to the AgatteClient
        Google+ community (<link>http://gplus.to/AgatteClient</link>).\n
        \n
        If you wan\'t to take part in development, submit bugs or translation go to GitHub
        (<link>https://github.com/remipannequin/AgatteClient</link>).</string>
    <string name="about_privacy">To enable you to send your punching in a fast and easy manner,
        AgatteClient stores your credential to the Agatte server. It communicate only
        with this server : your login and password won\'t be send to any other party.
        Nervertheless, they might be vulnerable to a malicious application with root
        access to your phone.</string>
    <string name="about_rate">Please take to time to rate this app. Your feedback will be really
        appreciated.</string>
    <string name="about_rate_button">Rate on\nPlay Store</string>
    <string name="about_getting_started">Before you can connect to the Agatte server, you will have
        to first enter your password and login.</string>
    <string name="About_getting_started_title">Getting started</string>
    <string name="About_getting_involved_title">Getting involved</string>
    <string name="about_privacy_title">Privacy</string>
    <string name="about_licence_title">Licence</string>
    <string name="about_alarms_title">Alarms</string>
    <string name="about_alarm">You may schedule punching, by choosing Alarms in the app main menu.
        At the chosen time and days, the app will try to reach the agatte server and send a
        punching request. For each alarm, you can change the time, select on which days it is active,
        or enable/disable it. To delete an alarm, long tap on it.\n
        \n
        Please notice that if the phone is not on a wifi network authorized for sending punches,
        this will fail. Likewise, don\'t forget to disactivate alarms if you do a manual punching:
        this feature is dumb, and won\'t try to correct forgotten punching or disactivate itself if
        you already manually punched. More intelligent behaviour might be implemented in the future.
    </string>
    <string name="interface_preference">Interface</string>
    <string name="confirm_punch_title">Confirm Punch</string>
    <string name="short_sunday">SUN</string>
    <string name="sunday">Sunday</string>
    <string name="short_saturday">SAT</string>
    <string name="saturday">Saturday</string>
    <string name="short_friday">FRI</string>
    <string name="friday">Friday</string>
    <string name="short_thursday">THU</string>
    <string name="thursday">Thursday</string>
    <string name="short_wednesday">WED</string>
    <string name="wednesday">Wednesday</string>
    <string name="short_tuesday">TUE</string>
    <string name="tuesday">Tuesday</string>
    <string name="short_monday">MON</string>
    <string name="monday">Monday</string>
    <string name="title_activity_alarm">Alarms</string>
    <string name="successful_programmed_punch">Programmed punching has been successfully made at %s</string>
    <string name="programmed_punch_success_title">Programmed punching failed</string>
    <string name="programmed_punch_failed_title">Programmed punching done</string>
    <string name="action_alarms">Alarms</string>
    <string name="alarm_add">Add</string>
    <string name="week_label">Week</string>
    <string name="year_label">Year</string>
    <string name="time_test_week">0h</string>
    <string name="time_test_year">0d</string>
    <string name="alarm_enable">Enable</string>
    <string name="error">Error</string>
    <string name="hour_format">HH:mm</string>
    <string name="duration_hour">%dh</string>
    <string name="duration_minute">%02d</string>
    <string name="date_format">E dd MMM yyyy</string>
    <string name="anomaly">anomaly</string>
    <string name="counter_duration_min">%1$+02dmin</string>
    <string name="counter_duration">%1$+dh%2$02d</string>
    <string name="counter_year">%1$+dd%2$s</string>
    <string name="counter_unavailable">Counters unavailable</string>
    <string name="auto_query_title">Query counters automatically</string>
    <string name="alarm_delete_confirm">Delete this alarm (at %s)</string>
    <string name="alarm_delete_confirm_question">Delete?</string>
    <string name="alarm_delete_confirm_cancel">Cancel</string>
    <string name="alarm_delete_confirm_ok">OK</string>
    <string name="store_open_failed">Could not open Google Play.</string>
    <string name="conter_autoquery_descativated">        Counter are not currently available, deactivating automatic query to reduce data consumption</string>
    <string name="alarm_done_notification_title_template">Alarm done: %1$s</string>
    <string name="alarm_done_notification_placeholder_text_template">You said %1$s and lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis. Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec tortor.</string>
    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="preference_notification_sound">Notification sound</string>

</resources>
