<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/connection_preferences">

        <EditTextPreference
            android:defaultValue="@string/server_default_value"
            android:inputType="textUri"
            android:key="server"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/server_prefs_title" />

        <EditTextPreference
            android:capitalize="none"
            android:defaultValue="@string/login_default_value"
            android:inputType="textNoSuggestions"
            android:key="login"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/login_prefs_title" />

        <EditTextPreference
            android:capitalize="none"
            android:defaultValue="@string/password_default_value"
            android:inputType="textPassword"
            android:key="password"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/password_prefs_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/profile_preference">
        <ListPreference
            android:defaultValue="3"
            android:entries="@array/week_profile_array"
            android:entryValues="@array/week_profile_values"
            android:key="week_profile"
            android:title="@string/week_goal_prefs_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/interface_preference">
        <CheckBoxPreference
            android:checked="true"
            android:key="confirm_punch"
            android:selectAllOnFocus="true"
            android:title="@string/confirm_punch_title" />

        <CheckBoxPreference
            android:checked="false"
            android:key="auto_query"
            android:selectAllOnFocus="true"
            android:title="@string/auto_query_title" />


    </PreferenceCategory>

</PreferenceScreen>