<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:key="server"
        android:title="@string/server_prefs_title"
        android:defaultValue="@string/server_default_value"
        android:selectAllOnFocus="true"
        android:inputType="textUri"
        android:singleLine="true"
        android:maxLines="1" />

    <EditTextPreference
        android:key="login"
        android:title="@string/login_prefs_title"
        android:defaultValue="@string/login_default_value"
        android:selectAllOnFocus="true"
        android:inputType="textNoSuggestions"
        android:capitalize="none"
        android:singleLine="true"
        android:maxLines="1" />

    <EditTextPreference
        android:key="password"
        android:title="@string/password_prefs_title"
        android:defaultValue="@string/password_default_value"
        android:selectAllOnFocus="true"
        android:inputType="textPassword"
        android:capitalize="none"
        android:singleLine="true"
        android:maxLines="1" />

</PreferenceScreen>
