<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AboutActivity">

    <TextView
        android:id="@+id/disclaimer_textView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/freesoft_textView"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="false"
        android:gravity="center_horizontal"
        android:text="@string/about_disclaimer"
        android:textSize="12sp"
        android:textStyle="italic"
        android:typeface="sans" />

    <TextView
        android:id="@+id/description_textView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/disclaimer_textView"
        android:layout_alignParentTop="true"
        android:text="@string/about_description"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/author_textView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/description_textView"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/about_author"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/version_textView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/author_textView"
        android:layout_below="@+id/author_textView"
        android:singleLine="false"
        android:text="@string/about_version"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/freesoft_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/version_textView"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal"
        android:text="@string/about_free_soft"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColorLink="@color/abc_search_url_text_holo" />

</RelativeLayout>
